javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/BooleanNot.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class BooleanNot {
  int n = ~1;
}
