javaDSL/src/test/resources/typeSystemTestModels/invalid/expressions/SuperClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class SuperClass {

  public int aa = 1;
}
